<resources>
    <string name="app_name">Android Native Concepts</string>
    <string name="action_settings">Settings</string>
    <string name="get_req">Get Request using HTTP</string>
    <string name="get_req_volley">Get Request using Volley</string>
    <string name="post_req_http">POST Request using HTTP</string>
    <string name="post_req_volley">POST Request using Volley</string>
    <string name="req_method">Method</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="open_second">Open Second Activity</string>
    <string name="open_sqlite">Open SQLite Activity</string>
    <string name="enter_book_name">Book Name</string>
    <string name="sqlite_activity">SQLite Activity</string>
</resources>
